2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	- Port the mount operation to use the sync i/op.
	- Keep the auth information around so we can use them again in
	the case that a subpath requires different authentication. This
	is needed since libsoup will forgot all auth after a 401.
	- Ignore trailing slashes in ms_response_is_target ().
	- Add an initial version of make_directory ().
	* daemon/gvfsbackendhttp.c: 
	* daemon/gvfsbackendhttp.h:
	Add message_new_from_filename_full which will add a trailing "/"
	if is_dir is true. (Saves uneccesary redirects in some cases)

	Various bits and pieces came from Yann Rouillard.

2008-02-25  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsmb.c:
	Support gnome-keyring (#511517)
	Patch from Carlos Garcia Campos

2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendnetwork.c (recompute_files):
	Fix spelling inconsistency "Network" vs "network" (#518487)
	
2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonvfs.c (get_mountspec_from_uri):
	g_uri_get_scheme -> g_uri_parse_scheme

2008-02-25  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* hal/ghalvolume.c (do_update_from_hal_for_camera): Add
	two translator comments.

2008-02-24  David Zeuthen  <davidz@redhat.com>

	* client/gdaemonfile.c:
	* client/gdaemonvolumemonitor.c:
	* client/gdaemonvolumemonitor.h: Prefer to return a GDaemonMount
	from an existing GDaemonVolumeMonitor rather than rolling our own
	for GDaemonFile's g_file_find_enclosing_mount()
	implementation. This is to ensure that g_mount_get_volume() will
	work properly with mounts that are adopted by GVolume objects from
	other volume monitors.

	* configure.ac: Check for libgphoto2

	* daemon/Makefile.am:
	* daemon/gvfsbackendcdda.c: Use HAL to detect when the disc is
	removed and then forcibly unmount the mount. Report size of
	disc. Hint the file manager to preview files.

	* hal/ghaldrive.c:
	* hal/ghalmount.c: